# git_doc_history

./: .flake8  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
examples/: todotxt_diff.py
git_doc_history/: __init__.py  config.py
tests/: test_git_doc_history.py
